fixed white space for desktop view for .top

--- a/responsive_css_files/main-responsive.css
+++ b/responsive_css_files/main-responsive.css
@@ -1689,7 +1689,6 @@
     .top {
         padding: 0 0 80px 0;
         background-color: #101010;
-        margin-bottom: 150px;
     }
     .top nav {
         display: flex;
@@ -3305,7 +3304,6 @@
     .top {
         padding: 0 0 80px 0;
         background-color: #101010;
-        margin-bottom: 150px;
     }
     .top nav {
         display: flex;
@@ -4904,7 +4902,6 @@
     .top {
         padding: 0 0 80px 0;
         background-color: #101010;
-        margin-bottom: 150px;
     }
     .top nav {
         display: flex;
@@ -6489,7 +6486,6 @@
     .top {
         padding: 0 0 80px 0;
         background-color: #101010;
-        margin-bottom: 150px;
     }
     .top nav {
         display: flex;
